# audiobooks

./: .gitignore  AUTHORS  MANIFEST.in  Makefile  README.rst  aud0.sh  conv1.mk  defs.mk  pyproject.toml  requirements.txt  setup.cfg
audiobooks/: _Book.py  _Track.py  _Tracks.py  __init__.py  __main__.py  app.py
contrib/: README.org
etc/: audio-pyproject.toml
src/pitono/audio/: _Book.py  _MInfo.py  _MInfo1.py  _Track.py  _Tracks.py  __init__.py  _audlibroj.py  audlibroj.txt
src/pitono/audio/tests/: broken_Test1.py  test_00_imports.py  test_02_chapters.py
tests/: test_Test.py  test_Test1.py
