[metadata]
name = audiobooks
author = Florian Heinle
author_email = launchpad@planet-tiax.de
summary = helper for audiobook (.m4b) creation
home-page = http://github.com/fheinle/audiobooks
license = MIT
description-file = README.rst
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Topic :: Multimedia :: Sound/Audio :: Analysis
keywords =
    multimedia
    audio
    chapters

[files]
packages =
    audiobooks
data_files =
    etc/audiobooks = etc/*
    doc/audiobooks = contrib/*
[entry_points]
console_scripts =
    audiobooks = audiobooks.app:main
audiobooks.config.drivers =
    audiobooks = audiobooks.cfg.driver:Plain

[pbr]
warnerrors = true
autodoc_tree_index_modules = True